--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "vue": "^2.6.6",
     "vue-chartjs": "^3.4.0",
     "vue-router": "^3.0.1",
+    "vue2-google-maps": "^0.10.6",
     "vuetify": "^1.3.0",
     "vuex": "^3.0.1"
   },
