--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "chart.js": "^2.7.3",
     "vue": "^2.6.6",
     "vue-chartjs": "^3.4.0",
+    "vue-qr-reader": "^1.6.0",
+    "vue-qrcode-reader": "^1.4.0",
     "vue-router": "^3.0.1",
     "vue2-google-maps": "^0.10.6",
     "vuetify": "^1.3.0",
