--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "vue-qr-reader": "^1.6.0",
     "vue-qrcode-reader": "^1.4.0",
     "vue-router": "^3.0.1",
+    "vue-swal": "^1.0.0",
+    "vue-sweetalert2": "^1.6.4",
     "vue2-google-maps": "^0.10.6",
     "vuetify": "^1.3.0",
     "vuex": "^3.0.1"
